syntax = "proto3";

package swiftschool.common_module.v1;

option go_package = "swiftschool/app/common/v1;commonv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "proto/common/v1/common.proto";

// DocumentService manages document uploads and metadata.
service DocumentService {
  rpc CreateDocument(CreateDocumentRequest) returns (DocumentResponse) {
    option (google.api.http) = { post: "/api/common/documents/create" body: "*" };
  }
  rpc ListDocuments(swiftschool.common.v1.TenantListRequest) returns (ListDocumentsResponse) {
    option (google.api.http) = { get: "/api/common/documents/list" };
  }
}

message CreateDocumentRequest {
  string institute_id = 1;
  string owner_id = 2;
  string owner_type = 3;
  string doc_type = 4;
  google.protobuf.StringValue file_name = 5;
  string file_url = 6;
}

message DocumentResponse {
  string id = 1;
  string institute_id = 2;
  string owner_id = 3;
  string owner_type = 4;
  string doc_type = 5;
  google.protobuf.StringValue file_name = 6;
  string file_url = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message ListDocumentsResponse {
  repeated DocumentResponse documents = 1;
}
